--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>GeekShop</title>
+    <title>{{ title|title }}</title>
 
     {% block stylesheets %}
     {% endblock %}
@@ -17,6 +17,47 @@
 </head>
 
 <body>
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="{% url 'index' %}">{{ brand_name }}</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'products' %}">{{ catalog_link }} <i class="fas fa-shopping-bag"></i> </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="users/login.html">{{ log_in }} <i class="fas fa-sign-in-alt"></i></a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fas fa-user-circle"></i>
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li>
+                            <a class="dropdown-item" href="users/profile.html">{{ profile }}</a>
+                        </li>
+                        <li><a class="dropdown-item" href="orders/orders.html">{{ orders }}</a></li>
+                        <li><a class="dropdown-item" href="admin/admin.html">{{ admin_panel }}</a></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
+                        <li>
+                            <a class="dropdown-item" href="#">
+                                {{ log_out }}
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 {% block content %}
 {% endblock %}
 
