update product template

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -69,7 +69,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="/static/{{ product.img }}"
+                                 src="/media/{{ product.image }}"
                                  alt="{{ product.name|title }}">
                         </a>
                         <div class="card-body">
